[package]
name = "bcachefs-rs"
version = "0.1.0"
authors = ["Dan Robertson <dan@dlrobertson.com>"]
edition = "2018"
description = "Userspace tooling for bcachefs"
license = "GPLv2"
homepage = "bcachefs.org"
exclude = [".gitignore"]

[dependencies]
clap = "3.0.0-beta.2"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.8"
libblkid-rs = "0.1"
libc = "0.2"
nix = "0.21"
byteorder = "1.0"
bitflags = "1.0"

[lib]
name = "libbcachefs"
path = "./lib.rs"

[[bin]]
name = "bcachefs-rs"
path = "./bcachefs.rs"
